refactor(form submission): replace  event listner with endpoints

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <form action="/" id="form-submit" method="POST" class="d-flex align-items-center gap-2">
             <div>
                 <label for="student"></label>
-                <input type="text" id="name" placeholder="Name">
+                <input type="text" id="name" name="name" placeholder="Name">
             </div>
             <div>
                 <label for="email"></label>
-                <input type="email" id="email" placeholder="Email">
+                <input type="email" id="email" name="email" placeholder="Email">
             </div>
             <div>
                 <label for="phone"></label>
-                <input type="number" id="phone" placeholder="Phone">
+                <input type="number" id="phone" name="phone" placeholder="Phone">
             </div>
             <input type="hidden">
             <button class="btn btn-primary btn-sm" type="submit">Add</button>
