fix(form): fix submission

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 class="h2">Crud app</h1>
     <div class="d-flex gap-2">
         <h5>Add infomation</h3>
-        <form action="/" id="form-submit" method="POST" class="d-flex align-items-center gap-2">
+        <form action="/students" id="form-submit" method="POST" class="d-flex align-items-center gap-2">
             <div>
                 <label for="student"></label>
                 <input type="text" id="name" name="name" placeholder="Name">
