--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Document</title>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+    </script>
 </head>
 <body>
     <h1 class="h2">Crud app</h1>
@@ -39,6 +43,37 @@
         <tbody class="t-body">
         </tbody>
     </table>
+
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">x</span></button>
+                    <h4 class="modal-title" id="gridSystemModalLabel">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="form-update" class="d-flex align-items-center gap-2 flex-wrap gap-2">
+                        <div>
+                            <label for="student"></label>
+                            <input type="text" id="update-name" placeholder="Name">
+                        </div>
+                        <div>
+                            <label for="email"></label>
+                            <input type="email" id="update-email" placeholder="Email">
+                        </div>
+                        <div>
+                            <label for="phone"></label>
+                            <input type="number" id="update-phone" placeholder="Phone">
+                        </div>
+                        <input type="hidden">
+                        <button class="btn btn-primary btn-sm" type="submit" id="update-btn">Add</button>
+                        <button class="btn btn-secondary btn-sm" type="cancel" id="cancel-btn">Cancel</button>
+                    </form>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
     <script src="index.js"></script>
 </body>
 </html>
